--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
   letter-spacing: 0.02em;
   text-decoration: none;
   text-transform: none;
-  flex-basis: calc((100% - 3 * 24px) / 4);
+  flex-basis: calc((100% - 3 * 16px) / 3);
 }
 .text-body {
   font-size: 16px;
@@ -107,6 +107,7 @@
 }
 
 .text-style-m {
+  margin-bottom: 72px;
   justify-content: center;
   font-size: 36px;
   font-family: "Roboto";
@@ -122,6 +123,7 @@
 
 .text-style-mm {
   font-size: 36px;
+  margin-bottom: 72px;
   color: var(--color-grey);
   background-color: #ffffff;
   font-family: "Roboto";
@@ -134,6 +136,7 @@
   text-transform: capitalize;
 }
 .header-logo-link {
+  display: inline-block;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -142,13 +145,15 @@
   /* identical to box height, or 117% */
   margin-top: 24px;
   margin-left: 156px;
-  display: flex;
+  margin-right: 76px;
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--color-iris);
 }
 .text-style-s {
+  text-align: center;
+  margin-bottom: 8px;
   font-size: 20px;
   font-family: "Roboto";
   font-weight: 500;
@@ -159,6 +164,7 @@
   letter-spacing: 0.02em;
   text-decoration: none;
   text-transform: none;
+  width: calc((100% - 72px) / 4);
 }
 .studio-logo {
   width: 71px;
@@ -229,9 +235,11 @@
 }
 .img-t {
   background-color: var(--color-white);
+  border-radius: 0px 0px 4px 4px;
 }
 .footer {
   background-color: var(--color-navy-blue);
+  padding: 100px 0;
 }
 .color-f {
   color: var(--color-cloud);
@@ -251,6 +259,9 @@
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   cursor: pointer;
+  padding: 12px 24px;
+  border: 1px solid var(--color-cornflower);
+  border: 1px solid transparent;
 }
 
 .button-other {
@@ -284,6 +295,8 @@
 }
 .color-our-team {
   background-color: var(--color-white);
+  display: flex;
+  gap: 24px;
 }
 .medium-color {
   color: var(--color-grey);
@@ -301,10 +314,12 @@
   background-color: var(--color-ocean);
 }
 .button-all:hover {
+  border: 1px solid transparent;
   color: var(--color-white);
   background-color: #404bbf;
 }
 .button-all:focus {
+  border: 1px solid transparent;
   color: var(--color-white);
   background-color: #404bbf;
 }
@@ -333,8 +348,7 @@
 }
 .sect-all {
   list-style: none;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding: 120px 0;
 }
 .sect-color {
   color: var(--color-cloud);
@@ -397,7 +411,55 @@ p {
   display: flex;
 }
 .doing {
+  list-style: none;
   display: flex;
   gap: 24px;
   flex-basis: calc((100% - 3 * 16px) / 3);
+}
+.section-2 {
+  gap: 24px;
+  list-style: none;
+}
+.team {
+  padding: 32px 16px;
+}
+.color-tt {
+  text-align: center;
+  color: var(--color-slate);
+}
+.text-style-bigg {
+  font-size: 56px;
+  font-family: "Roboto";
+  font-weight: 700;
+  font-style: normal;
+  max-width: 496px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  text-transform: none;
+  text-align: center;
+  padding: 96px 0 120px;
+}
+.list-portfolio {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
+}
+.list-port-img {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.link-port {
+  text-decoration: none;
+  width: calc((100% - 48px) / 3);
+}
+.div-port {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  margin-bottom: 8px;
 }
