--- a/css/style.css
+++ b/css/style.css
@@ -244,8 +244,7 @@
   background-color: var(--color-white);
   gap: 24px;
   list-style: none;
-  flex-basis: calc((100% - 72px) / 4);
-}
+  width: calc((100% - 72px) / 4); 
 
 .list {
   list-style: none;
@@ -491,7 +490,7 @@ p {
   margin-bottom: 8px;
 }
 .img-doing {
-  width: calc((100% - 48px) / 3);
+  width: calc((100% - 3 * 16px) / 3);
 }
 .header-portf {
   display: flex;
