--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,8 @@
   background-color: var(--color-white);
   gap: 24px;
   list-style: none;
-  width: calc((100% - 72px) / 4); 
+  width: calc((100% - 72px) / 4);
+}
 
 .list {
   list-style: none;
@@ -266,6 +267,7 @@
 .footer {
   background-color: var(--color-navy-blue);
   padding: 100px 0;
+  display: inline-block;
 }
 .color-f {
   color: var(--color-cloud);
@@ -437,7 +439,7 @@ p {
 
 .doing {
   list-style: none;
-  display: flex;
+  display: block;
   gap: 24px;
   flex-basis: calc((100% - 3 * 16px) / 3);
 }
