--- a/css/style.css
+++ b/css/style.css
@@ -244,8 +244,7 @@
   background-color: var(--color-white);
   gap: 24px;
   list-style: none;
-  width: calc((100% - 72px) / 4);
-}
+  width calc((100% - 3 * 24px) / 4);}
 
 .list {
   list-style: none;
@@ -438,10 +437,11 @@ p {
 }
 
 .doing {
+   display: flex; 
   list-style: none;
-  display: block;
+  width: calc((100% - 48px) / 3);
   gap: 24px;
-  flex-basis: calc((100% - 3 * 16px) / 3);
+  
 }
 .section-studio-all {
   display: flex;
@@ -493,6 +493,7 @@ p {
 }
 .img-doing {
   width: calc((100% - 3 * 16px) / 3);
+   display: flex; 
 }
 .header-portf {
   display: flex;
