--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,18 @@
   --color-white: #ffffff;
   --color-dairy: #fcfcfc;
 }
+img {
+  display: block;
+}
+ul {
+  padding-left: 0%;
+}
 .text-style-big {
   font-size: 56px;
   font-family: "Roboto";
   font-weight: 700;
   font-style: normal;
-  max-width: 496px;
+
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-decoration: none;
@@ -244,7 +250,8 @@
   background-color: var(--color-white);
   gap: 24px;
   list-style: none;
-  width calc((100% - 3 * 24px) / 4);}
+  width: calc((100% - 3 * 24px) / 4);
+}
 
 .list {
   list-style: none;
@@ -404,7 +411,6 @@ Header background, team card background
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  display: flex;
 }
 
 /* reset */
@@ -432,16 +438,12 @@ p {
   margin-right: auto;
   align-items: center;
 }
-.img {
-  display: block;
-}
 
 .doing {
-   display: flex; 
+  display: flex;
   list-style: none;
   width: calc((100% - 48px) / 3);
   gap: 24px;
-  
 }
 .section-studio-all {
   display: flex;
@@ -493,7 +495,7 @@ p {
 }
 .img-doing {
   width: calc((100% - 3 * 16px) / 3);
-   display: flex; 
+  display: flex;
 }
 .header-portf {
   display: flex;
