--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ ul {
   font-family: "Roboto";
   font-weight: 700;
   font-style: normal;
-
+  max-width: 496px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-decoration: none;
@@ -294,6 +294,7 @@ ul {
   border-radius: 4px;
   cursor: pointer;
   padding: 12px 24px;
+  border: 1px solid #e7e9fc;
   border: 1px solid var(--color-cornflower);
   border: 1px solid transparent;
 }
@@ -505,4 +506,10 @@ p {
 .list-adress {
   list-style: none;
   padding: 24px 0;
+}
+.container-port {
+  display: flex;
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
