--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ ul {
   border-radius: 4px;
   color: var(--color-white);
 }
-.color-h3 {
+.sect-2 {
   color: var(--color-grey);
   background-color: var(--color-white);
   gap: 24px;
