--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ ul {
 }
 
 .text-style-big {
+  justify-content: center;
   font-size: 56px;
   font-family: "Roboto";
   font-weight: 700;
@@ -79,6 +80,7 @@ ul {
 }
 .button-text {
   border: none;
+  justify-content: center;
   min-width: 169px;
   height: 56px;
   font-size: 16px;
