--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,13 @@ img {
   display: block;
 }
 ul {
-  padding-left: 0%;
+  padding-left: 0;
+  margin: 0;
 }
 
 .text-style-big {
-  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 56px;
   font-family: "Roboto";
   font-weight: 700;
@@ -61,8 +63,9 @@ ul {
   font-size: 16px;
   font-family: "Roboto";
   font-weight: 400;
-  margin-top: 24px;
   display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -79,10 +82,9 @@ ul {
   color: var(--color-navy-blue);
 }
 .button-text {
+  margin-left: auto;
+  margin-right: auto;
   border: none;
-  justify-content: center;
-  min-width: 169px;
-  height: 56px;
   font-size: 16px;
   display: block;
   font-family: "Roboto", sans-serif;
@@ -116,6 +118,7 @@ ul {
 }
 
 .text-style-m {
+  padding-top: 120px;
   margin-bottom: 72px;
   justify-content: center;
   font-size: 36px;
@@ -134,7 +137,6 @@ ul {
   font-size: 36px;
   margin-bottom: 72px;
   color: var(--color-grey);
-  background-color: #ffffff;
   font-family: "Roboto";
   font-weight: 700;
   font-style: normal;
@@ -145,7 +147,6 @@ ul {
   text-transform: capitalize;
 }
 .header-logo-link {
-  display: inline-block;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -153,7 +154,7 @@ ul {
   line-height: 1.17;
   /* identical to box height, or 117% */
   margin-top: 24px;
-  margin-left: 156px;
+
   margin-right: 76px;
   align-items: center;
   letter-spacing: 0.03em;
@@ -171,9 +172,6 @@ ul {
   font-size: 18px;
   line-height: 1.17;
   /* identical to box height, or 117% */
-  margin-top: 24px;
-  margin-left: 156px;
-  margin-right: 76px;
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -181,6 +179,8 @@ ul {
 }
 
 .text-style-s {
+  white-space: nowrap;
+  margin-left: 58px;
   text-align: center;
   margin-bottom: 8px;
   font-size: 20px;
@@ -196,14 +196,12 @@ ul {
   width: calc((100% - 72px) / 4);
 }
 .studio-logo {
-  width: 71px;
-  height: 24px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-  display: flex;
+
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -275,10 +273,13 @@ ul {
 .footer {
   background-color: var(--color-navy-blue);
   padding: 100px 0;
-  display: inline-block;
 }
 .color-f {
   color: var(--color-cloud);
+  width: 264px;
+  height: 72px;
+  left: 156px;
+  top: 2420px;
 }
 .studio {
   display: inline-block;
@@ -331,7 +332,6 @@ ul {
   color: var(--color-grey);
 }
 .color-our-team {
-  background-color: var(--color-white);
   display: flex;
   gap: 24px;
 }
@@ -393,15 +393,6 @@ ul {
   color: var(--color-cloud);
 }
 .header {
-  box-sizing: border-box;
-  width: 1158px;
-  left: 0px;
-  top: 0px;
-  /* WHITE
-Header background, team card background
-*/
-  background: #ffffff;
-  /* CORNFLOWER */
   border-bottom: 1px solid #e7e9fc;
 }
 .color-b:focus {
@@ -429,7 +420,6 @@ p {
   display: flex;
   align-items: center;
   gap: 40px;
-  padding: 24px 0;
 }
 
 .header-container {
@@ -456,22 +446,13 @@ p {
 }
 .team {
   padding: 32px 16px;
+  text-align: center;
 }
 .color-tt {
   text-align: center;
   color: var(--color-slate);
 }
 .text-style-bigg {
-  font-size: 56px;
-  font-family: "Roboto";
-  font-weight: 700;
-  font-style: normal;
-  max-width: 496px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  text-transform: none;
-  text-align: center;
   padding: 96px 0 120px;
 }
 .list-portfolio {
@@ -495,11 +476,8 @@ p {
   padding: 32px 16px;
   border: 1px solid var(--color-cornflower);
   border-top: none;
-  margin-bottom: 8px;
 }
 .img-doing {
-  display: flex;
-  gap: 24px;
   width: calc((100% - 48px) / 3);
 }
 .header-portf {
