--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,7 @@ ul {
   font-family: "Roboto";
   font-weight: 400;
   display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
+
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -82,8 +81,6 @@ ul {
   color: var(--color-navy-blue);
 }
 .button-text {
-  min-width: 169px;
-  height: 56px;
   margin-left: auto;
   margin-right: auto;
   border: none;
@@ -120,7 +117,6 @@ ul {
 }
 
 .text-style-m {
-  padding-top: 120px;
   margin-bottom: 72px;
   justify-content: center;
   font-size: 36px;
@@ -155,7 +151,6 @@ ul {
   font-size: 18px;
   line-height: 1.17;
   /* identical to box height, or 117% */
-  margin-top: 24px;
 
   margin-right: 76px;
   align-items: center;
@@ -391,6 +386,11 @@ ul {
   list-style: none;
   padding: 120px 0;
 }
+.sect-al {
+  padding-top: 0;
+  list-style: none;
+  padding: 120px 0;
+}
 .sect-color {
   color: var(--color-cloud);
 }
@@ -422,7 +422,6 @@ p {
   display: flex;
   align-items: center;
   gap: 40px;
-  padding: 24px 0;
 }
 
 .header-container {
