--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,8 @@ ul {
   margin-bottom: 48px;
 }
 .button-f {
+  min-width: 169px;
+  height: 56px;
   cursor: pointer;
   background: var(--color-iris);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -422,6 +424,7 @@ p {
   display: flex;
   align-items: center;
   gap: 40px;
+  padding: 24px 0;
 }
 
 .header-container {
