--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,8 @@ ul {
   font-size: 16px;
   font-family: "Roboto";
   font-weight: 500;
+  display: block;
+  padding: 24px 0;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-transform: none;
@@ -385,6 +387,7 @@ ul {
   color: var(--color-ocean);
 }
 .sect-all {
+  padding-top: 0%;
   list-style: none;
   padding: 120px 0;
 }
@@ -424,7 +427,6 @@ p {
   display: flex;
   align-items: center;
   gap: 40px;
-  padding: 24px 0;
 }
 
 .header-container {
